# sdk-nrf

./: west.yml
include/nfc/tnep/: base.h  poller.h  tag.h  tnep.rst
samples/bluetooth/peripheral_lbs/: Kconfig  prj.conf
samples/bluetooth/peripheral_lbs/src/: main.c
samples/bluetooth/peripheral_uart/: prj.conf
samples/bluetooth/peripheral_uart/child_image/: hci_ipc.conf
samples/bluetooth/peripheral_uart/src/: main.c
samples/bluetooth/shell/: CMakeLists.txt  README.rst  TESTS.rst  prj.conf  sample.yaml  test_shell_basic.yml  test_shell_gatt_dm.yml  test_shell_multi_adv.yml
samples/bluetooth/shell/src/: main.c  shell_gatt_dm.c  shell_multiple_adv.c
samples/crypto/ecdsa/: CMakeLists.txt  prj.conf
samples/crypto/ecdsa/src/: main.c
samples/crypto/persistent_key_usage/src/: main.c
samples/nfc/nfc_read_write/: prj.conf
samples/nfc/nfc_read_write/src/: main.c
samples/nfc/tnep_poller/: CMakeLists.txt  prj.conf  sample.yaml
samples/nfc/tnep_poller/src/: main.c
samples/openthread/coap_client/child_image/: multiprotocol_rpmsg.conf
samples/spi_current/: CMakeLists.txt  prj.conf
samples/spi_current/boards/: nrf52840dk_nrf52840.overlay
samples/spi_current/src/: main.c
samples/zigbee/light_bulb/: prj.conf
samples/zigbee/light_switch/: overlay-multiprotocol_ble.conf  prj.conf
subsys/: CMakeLists.txt
subsys/bluetooth/services/: lbs.c
subsys/nfc/: CMakeLists.txt
subsys/nfc/tnep/: CMakeLists.txt  Kconfig  poller.c  protocol_timer.c  tag.c
subsys/zigbee/lib/zigbee_app_utils/: zigbee_app_utils.c
